# KnightsOfNyquistRDR

./: .gitignore  .gitmodules  Path.json  README.md  emptyMission.json  environment.sh  filter_wp.py  filteredWaypoints.plan  planExample.plan  ros-fly.py
catkin_ws/src/01-launchfiles/launchfiles/: CMakeLists.txt  package.xml
catkin_ws/src/01-launchfiles/launchfiles/launch/: master.launch  record.launch
catkin_ws/src/10-waypointcontrol/wp_controller/: CMakeLists.txt  package.xml  setup.py
catkin_ws/src/10-waypointcontrol/wp_controller/launch/: wp_controller_node.launch  wp_recorder_node.launch
catkin_ws/src/10-waypointcontrol/wp_controller/src/: wp_controller_node.py  wp_recorder_node.py
